packages/components/input-number/style/index.less
@import '../../style/mixins/reset.less';

.@{input-number-prefix} {
  &.@{input-prefix}-sm {
    .@{input-prefix}-suffix {
      font-size: var(--ix-font-size-sm);
    }
  }

  &-increase,
  &-decrease {
    display: inline-block;
    color: inherit;
    line-height: 1;
    z-index: 1;
    user-select: none;
    cursor: pointer;
    transition: color var(--ix-transition-duration-fast);

    &:hover {
      color: @input-number-icon-color-hover;
    }

    &&-disabled {
      cursor: not-allowed;
      color: @input-number-color-disabled;
    }
  }

  &-decrease {
    margin-top: -0.2em;
  }

  &-illegal {
    .@{input-prefix}-inner {
      color: @input-number-invalid-color;
    }
  }

  .@{input-prefix}-inner {
    min-width: 24px;
  }

  .@{input-prefix}-suffix {
    display: inline-flex;
    justify-content: center;
    flex-direction: column;
  }
}

